<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:context=".Crear_Cuenta">
    <TextView
            android:id="@+id/lbl1"
            android:text="@string/lblCuenta"
            android:textSize="30dp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/lbl2"
            android:text="@string/lbl1"
            android:textSize="15dp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl1"
            android:layout_marginTop="0dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:inputType="text"
            android:maxLength="9"
            android:id="@+id/TxtUsuario"
            android:hint="@string/txtUsuario"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl2"
            android:layout_marginTop="35dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:inputType="text"
            android:maxLength="9"
            android:id="@+id/TxtCodigo"
            android:hint="@string/TxtCodigo"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtUsuario"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:inputType="text"
            android:maxLength="9"
            android:id="@+id/TxtCarrera"
            android:hint="@string/TxtCarrera"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtCodigo"
            android:layout_marginTop="8dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:inputType="textEmailAddress"
            android:id="@+id/TxtEmail"
            android:hint="@string/txtEmail"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtCarrera"
            android:layout_marginTop="8dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:id="@+id/Txtcontraseña"
            android:hint="@string/txtContraseña"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColorHint="#fff"
            android:maxLength="10"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtEmail"
            android:layout_marginTop="8dp"/>

    <Button

            android:id="@+id/Iniciar_Sesión"
            android:text="@string/btnRegistrarte"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:background="@drawable/bg"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txtcontraseña"
            android:layout_marginTop="40dp"
            android:onClick="Login"/>

    <TextView
            android:id="@+id/tengo_cuenta"
            android:text="@string/lbltengo_cuenta"
            android:textSize="14sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Iniciar_Sesión"
            android:layout_marginTop="20dp"
            android:onClick="Login"/>

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tengo_cuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:onClick="Login"/>

</android.support.constraint.ConstraintLayout>