<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:context=".Login">
    <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:inputType="textEmailAddress"
            android:id="@+id/TxtEmail"
            android:hint="@string/txtEmail"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="25dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:id="@+id/Txtcontraseña"
            android:hint="@string/txtContraseña"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textColorHint="#fff"
            android:maxLength="10"
            android:background="@drawable/bg2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtEmail"
            android:layout_marginTop="15dp"/>


    <Button

            android:id="@+id/Iniciar_Sesión"
            android:text="@string/btnIniciar_sesion"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:background="@drawable/bg"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txtcontraseña"
            android:layout_marginTop="40dp" android:onClick="Areas"/>
    <TextView
            android:id="@+id/olvido"
            android:text="@string/lblOlvido"
            android:textSize="14sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Iniciar_Sesión"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/Registrarse"
            android:text="@string/lblRegistrarse"
            android:textSize="14sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/olvido"
            android:layout_marginTop="20dp"
            android:onClick="Crear_Cuenta"
    />

</android.support.constraint.ConstraintLayout>