<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:context=".Ciudad_Universitaria">

    <TextView
            android:id="@+id/olvido"
            android:text="@string/btnCiudad_Universitaria"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="200dp"
            android:onClick="Areas"/>

    <Button

            android:id="@+id/btnfacultades"
            android:text="@string/btnfacultad"
            android:textColor="#fff"
            android:textSize="10sp"
            android:layout_width="80dp"
            android:background="@drawable/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnaulas"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/container"
            android:layout_height="wrap_content" android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/olvido" android:onClick="FragmentoFacultad"/>

    <Button
            android:layout_height="wrap_content"
            android:id="@+id/btnaulas"
            android:text="@string/btnaulas"
            android:textColor="#fff"
            android:textSize="10sp"
            android:layout_width="45dp"
            android:background="@drawable/bg"
            app:layout_constraintEnd_toStartOf="@+id/btnauditorum"
            android:layout_marginEnd="10dp" app:layout_constraintStart_toEndOf="@+id/btnfacultades"
            android:layout_marginStart="17dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/container" android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/olvido" android:onClick="FragmentoAulas"/>

    <Button
            android:layout_height="wrap_content"
            android:id="@+id/btnauditorum"
            android:text="@string/btnauditorum"
            android:textColor="#fff"
            android:textSize="10sp"
            android:layout_width="70dp"
            android:background="@drawable/bg"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toEndOf="@+id/btnaulas"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/container"
            android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/olvido"
            android:onClick="FragmentoAuditorium"/>

    <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/container"
            android:layout_width="295dp"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal" tools:ignore="MissingConstraints" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnfacultades">

    </LinearLayout>


</android.support.constraint.ConstraintLayout>