<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:context=".Areas"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">



    <ImageView
            android:id="@+id/univomaps"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/univo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/Ciudad_Universitaria"
            android:text="@string/btnCiudad_Universitaria"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_width="270dp"
            android:background="@drawable/bg"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/univomaps"
            android:layout_marginTop="30dp" android:onClick="Ciudad_universitaria"/>

    <Button

            android:id="@+id/Sede_Central"
            android:text="@string/btnCede_Central"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_width="270dp"
            android:background="@drawable/bg"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ciudad_Universitaria"
            android:layout_marginTop="40dp" android:onClick="Sede_central"/>
    <TextView
            android:id="@+id/olvido"
            android:text="@string/lblconexion"
            android:textSize="14sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sede_Central"
            android:layout_marginTop="80dp"
            android:onClick="sinConexion"/>

</android.support.constraint.ConstraintLayout>