<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:context=".Mostrar_Facultad">

    <TextView
            android:id="@+id/aula"
            android:text="@string/btnfacultad"
            android:textSize="30dp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/aula1"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/aula1"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/aula"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/lblaula1"
            android:text="@string/lblaula1"
            android:textSize="25dp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aula1"
            android:layout_marginTop="15dp"
    />
    <TextView
            android:id="@+id/descrip"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
            android:textSize="12dp"
            android:textColor="#fff"
            android:layout_width="270dp"
            android:layout_height="99dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblaula1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="3dp" android:layout_marginEnd="3dp"/>
    <Button

            android:id="@+id/regresar"
            android:text="@string/regresar"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_width="170dp"
            android:background="@drawable/bg"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descrip"
            android:layout_marginTop="10dp" android:onClick="Ciudad_universitaria"/>

</android.support.constraint.ConstraintLayout>